--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>Chuyển hướng...</title>
 </head>
 <body>
-  <p>Nếu bạn không được chuyển hướng, vui lòng <a href="https://ngocrongplay.com">bấm vào đây</a>.</p>
+  <h4>Đến trang chủ tại đây <a href="https://ngocrongplay.com">bấm vào đây</a>.</h4>
 </body>
 </html>
