--- a/ungho.html
+++ b/ungho.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Các Mốc Quà Ủng Hộ Game</title>
+    <link rel="shortcut icon" href="https://thanhdi.top/img/favicon.png" type="image/png">
+    <link rel="icon" href="https://thanhdi.top/img/favicon.png" type="image/png">
+
     <style>
         body {
             font-family: 'Segoe UI', sans-serif;
