--- a/ungho.html
+++ b/ungho.html
@@ -285,7 +285,7 @@
             box.className = 'milestone';
 
             const title = document.createElement('h2');
-            title.innerHTML = `Ủng hộ máy chủ ${milestone.amount.toLocaleString()} VNĐ<br>(Vô NPC trong nhà chọn Quy Đổi để nhận quà)`;
+            title.innerHTML = `Ủng hộ máy chủ ${milestone.amount.toLocaleString()} VNĐ<br><span style="font-size: 0.85em;">(Vô NPC trong nhà chọn Quy Đổi để nhận quà)</span>`;
             box.appendChild(title);
 
             const grid = document.createElement('div');
