--- a/ungho.html
+++ b/ungho.html
@@ -310,7 +310,7 @@
             note.style.fontSize = '0.9em';
             note.style.marginTop = '8px';
             note.style.fontStyle = 'italic';
-            note.style.color = '#555';
+            note.style.color = '#fff';
             box.appendChild(note);
         
             container.appendChild(box);
