--- a/duatop.html
+++ b/duatop.html
@@ -52,7 +52,8 @@
 <body>
     <div class="container">
         <h1>📢 THÔNG BÁO SỰ KIỆN ĐUA TOP – NGỌC RỒNG KID 🔥</h1>
-        <p><strong>MÁY CHỦ ĐƯỢC BẢO KÊ AN TOÀN BỞI THANH DI (NGÀI DI NRO)</strong></p>
+        <p><strong>MÁY CHỦ ĐƯỢC BẢO KÊ AN TOÀN BỞI Thanh Di's Gaming Studio</strong></p>
+        <p>Chắc bạn đã biết tất cả server được Thanh Di's Gaming Studio đồng hành đều có thời gian duy trì hơn 3 năm. Nên các bạn cứ thoải mái chơi. Đây là server 5 (ngọc rồng kid)</p>
 
         <h2>⏳ Thời gian đua Top Open</h2>
         <p>📅 <strong>Bắt đầu:</strong> Vui lòng chờ</p>
