--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="refresh" content="0; url=https://ngocrongplay.com">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chuyển hướng...</title>
+  <title>Trang chủ chính thức - Thanh Di's Gaming Studio</title>
+    <meta property="og:image" content="https://ngocrongclan.com/static/sonic/img/banner.png?v=12345610">
+    <meta property="og:image:secure_url" content="https://ngocrongclan.com/static/sonic/img/banner.png?v=12345610">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:type" content="image/png">
 </head>
 <body>
   <h4>Đến trang chủ tại đây <a href="https://ngocrongplay.com">bấm vào đây</a>.</h4>
