--- a/duatop.html
+++ b/duatop.html
@@ -56,8 +56,8 @@
         <p>Chắc bạn đã biết tất cả server được Thanh Di's Gaming Studio đồng hành đều có thời gian duy trì hơn 3 năm. Nên các bạn cứ thoải mái chơi. Đây là server 5 (ngọc rồng kid)</p>
 
         <h2>⏳ Thời gian đua Top Open</h2>
-        <p>📅 <strong>Bắt đầu:</strong> Vui lòng chờ</p>
-        <p>⏳ <strong>Kết thúc:</strong> Vui lòng chờ</p>
+        <p>📅 <strong>Bắt đầu:</strong> 20:00 10/08/2025</p>
+        <p>⏳ <strong>Kết thúc:</strong> 20:00 13/08/2025</p>
         
         <h2>🔥 ĐUA TOP OPEN 🔥</h2>
 
