--- a/duatop.html
+++ b/duatop.html
@@ -74,7 +74,7 @@
         <p>🎖️ <strong>Top 4 – 10:</strong> Đệ Chiến Thần</p>
 
         <h3>💎 TOP NẠP 💎</h3>
-<!--         <p class="note">(Lưu ý: Top nạp 1-2-3 chỉ tính từ 2.000.000 VNĐ trở lên)</p> -->
+        <p class="note">(Lưu ý: Top nạp 1-2-3 chỉ tính từ 2.000.000 VNĐ trở lên)</p>
         <p>🥇 <strong>Top 1:</strong> 1.000.000 VNĐ + 2 set Thiên Tôn + Chiến Thần + 2 Cốt Chí Tôn + 100 Đá Quý</p>
         <p>🥈 <strong>Top 2:</strong> 300.000 VNĐ + 2 set Thiên Tôn + Chiến Thần + 1 Cốt Chí Tôn + 50 Đá Quý</p>
         <p>🥉 <strong>Top 3:</strong> 100.000 VNĐ + 2 set Thiên Tôn + Chiến Thần + 10 Đá Quý</p>
@@ -84,7 +84,7 @@
         <p>📸 Vui lòng chụp lại đầy đủ bằng chứng về:</p>
         <p>✅ Đua top Sức Mạnh</p>
         <p>✅ Đua top Nhiệm Vụ</p>
-<!--         <p>✅ Nạp thẻ (chụp rõ bill chuyển khoản)</p> -->
+        <p>✅ Nạp thẻ (chụp rõ bill chuyển khoản)</p>
 
         <h2>🔥 Hãy sẵn sàng chiến đấu và khẳng định vị thế của mình! 🔥</h2>
         <p>💥 <strong>BQT Ngọc Rồng Kid kính báo!</strong> 🚀</p>
