--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Contact</title>
+    <title>Contact & Support – Thanh Di's Gaming Studio</title>
     <meta name="color-scheme" content="light dark" />
     <style>
         :root {
