--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Contact & Support – Thanh Di's Gaming Studio</title>
+    <meta property="og:image"
+        content="https://nroclan.com/static/sonic/img/contactimg.png?v=1">
+    <meta property="og:image:secure_url"
+        content="https://nroclan.com/static/sonic/img/contactimg.png?v=1">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:type" content="image/png">
+    <link rel="icon" type="image/x-icon" href="static/sonic/img/favicon_1.png">
     <meta name="color-scheme" content="light dark" />
     <style>
         :root {
