--- a/privacy.html
+++ b/privacy.html
@@ -111,72 +111,46 @@
 <body>
     <main class="wrap" role="main">
         <header>
-            <h1 data-i18n="heading">Privacy Policy</h1>
-            <p data-i18n="updated">Cập nhật: 08/09/2025 – Chính sách cho ứng dụng TDStudio Game.</p>
+            <h1 data-i18n="heading"></h1>
+            <p data-i18n="updated"></p>
         </header>
 
-        <!-- Tóm tắt -->
+        <!-- Summary -->
         <section class="card">
-            <span class="tag" data-i18n="summary_title">Tóm tắt</span>
-            <p data-i18n="summary_text">
-                Chúng tôi chỉ lưu <b>tài khoản (username + mật khẩu dạng hash)</b> và <b>dữ liệu nhân vật trong game</b>
-                (tiến trình, vật phẩm, thành tích) để đảm bảo tính năng đăng nhập và đồng bộ trò chơi.
-                Chúng tôi <b>không thu thập email, số điện thoại, địa chỉ</b> và <b>không tích hợp SDK quảng cáo hay
-                    theo dõi bên thứ ba</b>.
-            </p>
+            <span class="tag" data-i18n="summary_title"></span>
+            <p data-i18n="summary_text"></p>
         </section>
 
-        <!-- Phạm vi -->
+        <!-- Scope & Data -->
         <section class="card">
-            <h2 data-i18n="scope_title">Phạm vi áp dụng</h2>
-            <p data-i18n="scope_text">
-                Chính sách này áp dụng cho toàn bộ ứng dụng “TDStudio Game” được phát hành bởi Thanh Di’s Gaming Studio
-                trên iOS.
-            </p>
+            <h2 data-i18n="scope_title"></h2>
+            <p data-i18n="scope_text"></p>
 
-            <h2 data-i18n="data_title">Dữ liệu chúng tôi xử lý</h2>
+            <h2 data-i18n="data_title"></h2>
             <ul>
-                <li><b>User ID:</b> username + mật khẩu (lưu bằng hash, không lưu plain text).</li>
-                <li><b>Gameplay content:</b> tiến trình, nhân vật, vật phẩm trong game, lưu trên server để đồng bộ.</li>
-                <li><b>Diagnostics (tùy chọn):</b> crash log và hiệu năng, chỉ dùng để sửa lỗi và cải thiện chất lượng.
-                </li>
+                <li data-i18n="data_user"></li>
+                <li data-i18n="data_game"></li>
+                <li data-i18n="data_diagnostics"></li>
             </ul>
 
-            <h2 data-i18n="rights_title">Quyền và lựa chọn của bạn</h2>
-            <p data-i18n="rights_text">
-                Bạn có quyền yêu cầu <b>xóa tài khoản và toàn bộ dữ liệu</b>. Bạn có thể liên hệ với chúng tôi để yêu
-                cầu truy cập hoặc xóa dữ liệu.
-                Nếu gỡ cài đặt ứng dụng, dữ liệu cục bộ trên thiết bị sẽ bị xóa, còn dữ liệu tài khoản trên server sẽ
-                được giữ cho tới khi bạn yêu cầu xóa.
-            </p>
+            <h2 data-i18n="rights_title"></h2>
+            <p data-i18n="rights_text"></p>
 
-            <h2 data-i18n="contact_title">Liên hệ</h2>
-            <p>Email: <a href="mailto:contact@thanhdi.top">contact@thanhdi.top</a> ·
-                Form: <a href="https://thanhdi.top/contact.html">thanhdi.top/contact.html</a></p>
+            <h2 data-i18n="contact_title"></h2>
+            <p data-i18n="contact_text"></p>
 
-            <h2 data-i18n="changes_title">Thay đổi chính sách</h2>
-            <p data-i18n="changes_text">
-                Nếu phiên bản tương lai tích hợp SDK hoặc thu thập thêm dữ liệu, chúng tôi sẽ cập nhật trang này trước
-                khi phát hành.
-            </p>
+            <h2 data-i18n="changes_title"></h2>
+            <p data-i18n="changes_text"></p>
 
-            <h2>English (short)</h2>
-            <p>
-                <b>We collect only User ID and gameplay content.</b><br>
-                – Username + password (hashed, never plain text)<br>
-                – Gameplay data (progress, items) stored on our server<br>
-                – Crash data (optional), used only to fix bugs<br>
-                We do not collect email, phone number, or use third-party advertising SDKs.<br>
-                Contact: <a href="mailto:contact@thanhdi.top">contact@thanhdi.top</a>
-            </p>
-
+            <h2 data-i18n="short_title"></h2>
+            <p data-i18n="short_text"></p>
         </section>
 
         <!-- Footer -->
         <footer>
             <div class="foot-row">
                 <div class="brand">Thanh Di's Gaming Studio</div>
-                <p data-i18n="footer_note">Chính sách minh bạch — đơn giản, dễ hiểu.</p>
+                <p data-i18n="footer_note"></p>
             </div>
             <small>© <span id="year"></span> Thanh Di's Gaming Studio — All rights reserved.</small>
         </footer>
@@ -188,42 +162,56 @@
             const raw = (navigator.languages && navigator.languages[0]) || navigator.language || 'vi';
             const lang = (raw || 'vi').toLowerCase().split('-')[0];
             document.documentElement.lang = supported.includes(lang) ? lang : 'en';
+
             const i18n = {
                 vi: {
                     heading: 'Chính Sách Quyền Riêng Tư',
                     updated: 'Cập nhật: 08/09/2025 – Chính sách cho ứng dụng TDStudio Game.',
                     summary_title: 'Tóm tắt',
-                    summary_text: 'Chúng tôi chỉ lưu tài khoản (username + mật khẩu dạng hash) và dữ liệu nhân vật trong game để phục vụ đăng nhập, đồng bộ. Không thu email/sđt, không SDK quảng cáo.',
+                    summary_text: 'Chúng tôi chỉ lưu <b>tài khoản (username + mật khẩu dạng hash)</b> và <b>dữ liệu nhân vật trong game</b> (tiến trình, vật phẩm, thành tích). Không thu email/sđt, không SDK quảng cáo.',
                     scope_title: 'Phạm vi áp dụng',
                     scope_text: 'Áp dụng cho toàn bộ ứng dụng TDStudio Game phát hành trên iOS bởi Thanh Di’s Gaming Studio.',
                     data_title: 'Dữ liệu chúng tôi xử lý',
+                    data_user: '<b>User ID:</b> username + mật khẩu (lưu bằng hash, không lưu plain text).',
+                    data_game: '<b>Gameplay content:</b> tiến trình, nhân vật, vật phẩm trong game, lưu trên server để đồng bộ.',
+                    data_diagnostics: '<b>Diagnostics (tùy chọn):</b> crash log và hiệu năng, chỉ dùng để sửa lỗi và cải thiện.',
                     rights_title: 'Quyền và lựa chọn của bạn',
-                    rights_text: 'Bạn có quyền yêu cầu xóa tài khoản/dữ liệu. Gỡ app sẽ xóa dữ liệu cục bộ; dữ liệu server sẽ xóa khi bạn yêu cầu.',
+                    rights_text: 'Bạn có quyền yêu cầu <b>xóa tài khoản và toàn bộ dữ liệu</b>. Gỡ app sẽ xóa dữ liệu cục bộ; dữ liệu trên server sẽ xóa khi bạn yêu cầu.',
                     contact_title: 'Liên hệ',
+                    contact_text: 'Email: <a href="mailto:contact@thanhdi.top">contact@thanhdi.top</a> · Form: <a href="https://thanhdi.top/contact.html">thanhdi.top/contact.html</a>',
                     changes_title: 'Thay đổi chính sách',
-                    changes_text: 'Nếu tương lai cần thêm dữ liệu hoặc SDK, chúng tôi sẽ cập nhật trang này trước khi phát hành.',
+                    changes_text: 'Nếu trong tương lai cần thêm dữ liệu hoặc SDK, chúng tôi sẽ cập nhật trang này trước khi phát hành.',
+                    short_title: 'English (tóm tắt)',
+                    short_text: '<b>We collect only User ID and gameplay content.</b><br>– Username + password (hashed, never plain text)<br>– Gameplay data (progress, items) stored on our server<br>– Crash data (optional), used only to fix bugs<br>We do not collect email, phone number, or use third-party advertising SDKs.<br>Contact: <a href="mailto:contact@thanhdi.top">contact@thanhdi.top</a>',
                     footer_note: 'Chính sách minh bạch — đơn giản, dễ hiểu.'
                 },
                 en: {
                     heading: 'Privacy Policy',
                     updated: 'Updated: 08/09/2025 – Privacy policy for TDStudio Game.',
                     summary_title: 'Summary',
-                    summary_text: 'We only store account (username + hashed password) and gameplay data. No email/phone, no ads SDKs.',
+                    summary_text: 'We only store <b>account (username + hashed password)</b> and <b>gameplay data</b> (progress, items, achievements). We do not collect email/phone, and no ad SDKs are integrated.',
                     scope_title: 'Scope',
                     scope_text: 'Applies to all versions of TDStudio Game released on iOS by Thanh Di’s Gaming Studio.',
                     data_title: 'Data We Process',
+                    data_user: '<b>User ID:</b> username + password (stored hashed, never plain text).',
+                    data_game: '<b>Gameplay content:</b> progress, characters, items stored on server for sync.',
+                    data_diagnostics: '<b>Diagnostics (optional):</b> crash logs and performance data, only for fixing bugs.',
                     rights_title: 'Your Rights & Choices',
-                    rights_text: 'You may request account/data deletion. Local data is erased when uninstalling; server data erased upon your request.',
+                    rights_text: 'You have the right to request <b>account and data deletion</b>. Local data is erased when uninstalling; server data is erased upon request.',
                     contact_title: 'Contact',
+                    contact_text: 'Email: <a href="mailto:contact@thanhdi.top">contact@thanhdi.top</a> · Form: <a href="https://thanhdi.top/contact.html">thanhdi.top/contact.html</a>',
                     changes_title: 'Policy Changes',
-                    changes_text: 'If future versions need additional data or SDKs, we will update this page before release.',
+                    changes_text: 'If future versions require more data or SDKs, we will update this page before release.',
+                    short_title: 'English (short)',
+                    short_text: '<b>We collect only User ID and gameplay content.</b><br>– Username + password (hashed, never plain text)<br>– Gameplay data (progress, items) stored on our server<br>– Crash data (optional), used only to fix bugs<br>We do not collect email, phone number, or use third-party advertising SDKs.<br>Contact: <a href="mailto:contact@thanhdi.top">contact@thanhdi.top</a>',
                     footer_note: 'Transparent privacy policy — simple, clear.'
                 }
             };
+
             const dict = i18n[supported.includes(lang) ? lang : 'en'];
             document.querySelectorAll('[data-i18n]').forEach(el => {
                 const key = el.getAttribute('data-i18n');
-                if (dict[key]) el.textContent = dict[key];
+                if (dict[key]) el.innerHTML = dict[key];
             });
             document.getElementById('year').textContent = new Date().getFullYear();
         })();
