--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
               <div class="left">
                 <div class="pill">1</div>
                 <div>
-                  <div class="label">Dragonball Clan</div>
+                  <div class="label">Nro Clan</div>
                   <div class="sublabel"><span class="srvPrefix">Máy chủ</span> <span class="srvNum">1</span></div>
                 </div>
               </div>
@@ -194,7 +194,7 @@
               <div class="left">
                 <div class="pill">2</div>
                 <div>
-                  <div class="label">Dragonball 3Q</div>
+                  <div class="label">Nro 3Q</div>
                   <div class="sublabel"><span class="srvPrefix">Máy chủ</span> <span class="srvNum">2</span></div>
                 </div>
               </div>
@@ -206,7 +206,7 @@
               <div class="left">
                 <div class="pill">3</div>
                 <div>
-                  <div class="label">Dragonball Mun</div>
+                  <div class="label">Nro Mun</div>
                   <div class="sublabel"><span class="srvPrefix">Máy chủ</span> <span class="srvNum">3</span></div>
                 </div>
               </div>
@@ -218,7 +218,7 @@
               <div class="left">
                 <div class="pill">4</div>
                 <div>
-                  <div class="label">Dragonball Ping</div>
+                  <div class="label">Nro Ping</div>
                   <div class="sublabel"><span class="srvPrefix">Máy chủ</span> <span class="srvNum">4</span></div>
                 </div>
               </div>
@@ -230,7 +230,7 @@
               <div class="left">
                 <div class="pill">5</div>
                 <div>
-                  <div class="label">Dragonball Kid</div>
+                  <div class="label">Nro Kid</div>
                   <div class="sublabel"><span class="srvPrefix">Máy chủ</span> <span class="srvNum">5</span></div>
                 </div>
               </div>
