--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <main class="page">
     <section class="hero">
-      <img src="assets/banner.png" alt="Sự kiện nổi bật" />
+      <img src="assets/banner.png?v=12" alt="Sự kiện nổi bật" />
       <div class="hero__quick">
         <!-- Fanpage -->
         <a class="quick" href="https://www.facebook.com/ngocrongnthevmax" target="_blank">
@@ -86,7 +86,8 @@
     <section class="section">
       <div class="section__head">
         <h2 id="gamedexuat">GAME ĐỀ XUẤT</h2>
-        <a class="see-all" href="https://thanhdi.top/games" target="_blank" id="xemtatca">Xem tất cả <span class="arrow">›</span></a>
+        <a class="see-all" href="https://thanhdi.top/games" target="_blank" id="xemtatca">Xem tất cả <span
+            class="arrow">›</span></a>
       </div>
 
       <div class="cards">
